--- a/plugin.xml
+++ b/plugin.xml
@@ -20,13 +20,13 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
            id="custom-inappbrowser-plugin"
-      version="0.0.3">
+      version="0.0.4">
 
     <name>custom-inappbrowser-plugin</name>
     <description>Custom InAppBrowser Plugin</description>
     <license>Apache 2.0</license>
-    <keywords>custom,in,app,browser,inappbrowser,custominappbrowser,custominAppBrowser</keywords>
-    <repo>https://github.com/nitin-kapoor/custom-inAppBrowser-plugin.git</repo>
+    <keywords>custom,in,app,browser,inappbrowser,inAppBrowser,custominappbrowser,customInAppBrowser</keywords>
+    <repo>https://github.com/nitin-kapoor/custom-inappbrowser-plugin.git</repo>
 
     <engines>
       <engine name="cordova" version=">=3.1.0" /><!-- Needs cordova/urlutil -->
